--- a/main.html
+++ b/main.html
@@ -36,10 +36,10 @@
 		<button onclick="HW()">
 			Homework
 		</button>
-		<button onclick="Trips">
+		<button onclick='Trips'>
 			Trips
 		</button>
-		<button onclick="Holiday">
+		<button onclick='Holiday'>
 			Holidays
 		</button>
 		<button onclick='Events()'>
