--- a/main.html
+++ b/main.html
@@ -36,10 +36,10 @@
 		<button onclick="HW()">
 			Homework
 		</button>
-		<button onclick='Trips'>
+		<button>
 			Trips
 		</button>
-		<button onclick='Holiday'>
+		<button>
 			Holidays
 		</button>
 		<button onclick='Events()'>
@@ -52,19 +52,6 @@
 			</a>
 		</div>
 	</div>
-	<script type="text/javascript">
-		function Events(){
-			document.write("<body style=\"background-color: lightcyan\"><h1 style=\"color:darkcyan\">The Elections for the student council</h1><div><a href=\"main.html\">Back</a></div></body>");
-		}
-		function HW(){
-			document.write("<body style=\"background-color: lightcyan; color:darkcyan\"><h1>The homework that will be handed thursay is:</h1><ul>1) Math: Book page 99 from 10 till 22 even and 25.</ul><div><a href=\"main.html\">Back</a></div></body>");
-		}
-		function Holiday(){
-			alert("There is still no holidays soon");
-		}
-		function Trips(){
-			alert("There is still no holidays soon");
-		}
-	</script>
+	<script src="javascript/noname.js"></script>
 </body>
 </html>
